tests/baselines/reference/inlineSourceMaps.errors.txt
tests/cases/compiler/inlineSourceMaps.ts(3,1): error TS2304: Cannot find name 'console'.


==== tests/cases/compiler/inlineSourceMaps.ts (1 errors) ====
    
    var x = 0;
    console.log(x);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.